# jupyter-pre-commits

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  setup.py
jupyter_precommit/: black_notebook.py  check_valid_json.py  util.py
