[metadata]
name = jupyter_precommit
version = 0.0.1
description = A list of pre-commit hooks for Jupyter notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henrylaynesa/jupyter-pre-commits
author = Henry Laynesa Jr
author_email = henry.laynesa@gmail.com
license = MIT
license_file = LICENSE


[options]
packages = find:
install_requires =
    black==19.10b0,<20
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    black-notebook = jupyter_precommit.black_notebook:main
    check-valid-json = jupyter_precommit.check_valid_json:main
